add resume modules

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,4 +1,4 @@
 {
-    "title":"موضوعي nextjs",
-    "subtitle":"بلدي الإبداعية JS موضوع"
+    "title": "Nadim Sheikh",
+    "subtitle": "Sr. Software Engineer | Laravel | ReactJs | ReactNative | NextJs"
 }
