--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,4 @@
-{
-    "title":"My NextJs Theme",
-    "subtitle":"my creative next js theme"
+{    
+    "title": "Nadim Sheikh",
+    "subtitle": "Sr. Software Engineer | Laravel | ReactJs | ReactNative | NextJs"
 }
